add logout in security.yaml

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -6,7 +6,7 @@ security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
         users_in_memory: { memory: null }
-        in_database:
+        users_in_database:
             entity: 
                 class: App\Entity\User
                 property: email
@@ -17,12 +17,16 @@ security:
         main:
             anonymous: true
 
-            provider: in_database
+            provider: users_in_database
             
             form_login: 
                 login_path: account_login
                 check_path: account_login
                 default_target_path: ads_index
+
+            logout: 
+                path: account_logout
+                target: account_login
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
