Fix the link in adminNavbar

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -25,7 +25,7 @@ security:
                 check_path: admin_account_login
 
             logout: 
-                path: account_logout
+                path: admin_account_logout
                 target: homePage
         main:
             anonymous: true
